--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Todo App</title>
+    <title>WPH Todo App</title>
     <!-- Primary Meta Tags -->
     <title>React Todo App</title>
     <meta name="title" content="React Todo App" />
